--- a/.cz.yaml
+++ b/.cz.yaml
@@ -1,12 +1,11 @@
 ---
 commitizen:
   annotated_tag: true
-  bump_message: "bump(release): v$current_version \u2192 v$new_version"
+  bump_message: "bump(release): v$current_version → v$new_version"
   name: cz_conventional_commits
   tag_format: $major.$minor.$patch$prerelease
   update_changelog_on_bump: true
-  version: 1.1.1
+  version: 2.0.0
   version_files:
-  - build.gradle:version
   - charts/locust-k8s-operator/Chart.yaml:appVersion
   - charts/locust-k8s-operator/Chart.yaml:version
