feat(security): add Trivy scanning and enhanced Dependabot
Implements comprehensive security scanning infrastructure:

Security Scanning:
- Add Trivy security scan job to CI pipeline (fails on HIGH/CRITICAL)
- Create daily scheduled scan workflow for published images
- Upload scan results to GitHub Security tab (SARIF format)
- Auto-create issues when vulnerabilities are detected

Trivy Configuration:
- Add .trivy.yaml with severity levels (CRITICAL, HIGH)
- Create .trivyignore for managing false positives
- Add .trivycache/ to .gitignore

Dependabot Enhancements:
- Add gomod package ecosystem (weekly scans)
- Add docker package ecosystem (base image updates)
- Group related updates (K8s, OpenTelemetry, golang.org/x/*)
- Add consistent labels to all ecosystems

This prevents future CVE accumulation and provides early warning
when new vulnerabilities are disclosed in our dependencies or
published Docker images.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,12 +5,47 @@
 
 version: 2
 updates:
-  - package-ecosystem: "gradle" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  # Go module dependencies
+  - package-ecosystem: "gomod"
+    directory: "/"
     schedule:
       interval: "weekly"
+    groups:
+      kubernetes:
+        patterns:
+          - "k8s.io/*"
+          - "sigs.k8s.io/*"
+      opentelemetry:
+        patterns:
+          - "go.opentelemetry.io/*"
+      golang-x:
+        patterns:
+          - "golang.org/x/*"
+    labels:
+      - "dependencies"
+      - "go"
+
+  # Docker base images
+  - package-ecosystem: "docker"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    labels:
+      - "dependencies"
+      - "docker"
+
+  - package-ecosystem: "gradle"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    labels:
+      - "dependencies"
+      - "gradle"
 
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
+    labels:
+      - "dependencies"
+      - "github-actions"
