chore(debs): add sec scans with trivy
* fix(deps): update golang.org/x/* dependencies to fix CVEs

Updates golang.org/x/* packages to their latest versions:
- golang.org/x/net v0.38.0 → v0.50.0 (fixes 2 MEDIUM CVEs)
- golang.org/x/oauth2 v0.27.0 → v0.35.0
- golang.org/x/sys v0.31.0 → v0.41.0
- golang.org/x/text v0.23.0 → v0.34.0

Also updated related packages (sync, term, tools) to maintain compatibility.

This addresses 2 MEDIUM severity CVEs identified in Docker Hub security scan.

Testing:
- All unit tests pass
- Build compiles successfully

* fix(go): upgrade to Go 1.25 to fix stdlib CVEs

Updates Go version from 1.24.0 to 1.25 to address critical vulnerabilities:
- Fixes 2 CRITICAL severity CVEs in golang stdlib
- Fixes 7 HIGH severity CVEs in golang stdlib
- Fixes 12 MEDIUM severity CVEs in golang stdlib

Changes:
- go.mod: Update go directive to 1.25
- Dockerfile: Update base image to golang:1.25
- CI workflows already use go-version-file, so they'll pick up the new version automatically

This addresses the most severe vulnerabilities identified in Docker Hub security scan.

Testing:
- All unit tests pass with Go 1.25
- Build compiles successfully

* feat(security): add Trivy scanning and enhanced Dependabot

Implements comprehensive security scanning infrastructure:

Security Scanning:
- Add Trivy security scan job to CI pipeline (fails on HIGH/CRITICAL)
- Create daily scheduled scan workflow for published images
- Upload scan results to GitHub Security tab (SARIF format)
- Auto-create issues when vulnerabilities are detected

Trivy Configuration:
- Add .trivy.yaml with severity levels (CRITICAL, HIGH)
- Create .trivyignore for managing false positives
- Add .trivycache/ to .gitignore

Dependabot Enhancements:
- Add gomod package ecosystem (weekly scans)
- Add docker package ecosystem (base image updates)
- Group related updates (K8s, OpenTelemetry, golang.org/x/*)
- Add consistent labels to all ecosystems

This prevents future CVE accumulation and provides 

--- a/.codacy.yml
+++ b/.codacy.yml
@@ -1,4 +1,18 @@
+---
 exclude_paths:
   - "**/zz_generated.deepcopy.go"
   - "test/utils/**"
   - "**/*.md"
+  - "**.md"
+  - "*.md"
+  - "docs/**"
+  - "README.md"
+  - "SECURITY.md"
+  - "CONTRIBUTING.md"
+  - "LICENSE"
+
+engines:
+  markdownlint:
+    enabled: false
+  remark-lint:
+    enabled: false
